[gd_scene load_steps=3 format=3 uid="uid://bp5222lr7lpve"]

[ext_resource type="Script" path="res://MenuPrincipal.gd" id="1_5oi1t"]
[ext_resource type="Texture2D" uid="uid://b5hn8g8mctwen" path="res://inicio.jpg" id="2_mwv5t"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5oi1t")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mwv5t")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "LOBA"

[node name="InputNombre" type="LineEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Nombre"
max_length = 12
expand_to_text_length = true

[node name="BotonIniciar" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "Iniciar"

[connection signal="text_changed" from="CenterContainer/VBoxContainer/InputNombre" to="." method="_on_input_nombre_text_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BotonIniciar" to="." method="_on_boton_iniciar_pressed"]
